# racer

./: Cargo.toml  README.md  analyze_consensus.py  racer.example.toml
crates/racer/: Cargo.toml
crates/racer-core/: Cargo.toml
crates/racer-core/src/: error.rs  lib.rs  message.rs  validation.rs
crates/racer-core/tests/: core_tests.rs
crates/racer-macros/: Cargo.toml
crates/racer-macros/src/: codegen.rs  lib.rs  parser.rs  types.rs
crates/racer/src/: lib.rs  node.rs
crates/racer/src/cli/: config.rs  keygen.rs  logging.rs  mod.rs  run.rs
crates/racer/src/config/: at2.rs  mod.rs  plato.rs
crates/racer/src/crypto/: bls.rs  ecdsa.rs  keys.rs  mod.rs
crates/racer/src/network/: mod.rs  peer.rs  sockets.rs
crates/racer/src/plato/: controller.rs  mod.rs  rsi.rs  smoothing.rs
crates/racer/src/protocol/: gossip.rs  messages.rs  mod.rs  vector_clock.rs
crates/racer/src/util/: logging.rs
crates/racer/tests/: config_tests.rs  crypto_tests.rs  dealer_feedback_test.rs  network_tests.rs  node_tests.rs  plato_tests.rs  protocol_tests.rs  vector_clock_integration_test.rs
examples/: Cargo.toml
examples/config/: complex_schema_example.toml  default_message.toml  network.toml  sensor.toml  sensor_network.toml
examples/src/: sensor_network.rs
