[workspace]
members = ["crates/racer-core", "crates/racer-macros", "crates/racer", "examples"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["RACER Contributors"]
repository = "https://github.com/ten2mushi/racer"
description = "Lightweight leaderless consensus for IoT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
